mejora de vista en catalogo y producto

--- a/Views/Contactanos/Create.cshtml
+++ b/Views/Contactanos/Create.cshtml
@@ -5,7 +5,7 @@
 @model Contactanos
 
 <div class="container-form">
-<div class="seccion-titulo" >
+<div class="seccion-prim" >
   <h5 class="titulo-prim">Contactanos</h5>
 </div>
 <form asp-controller="Contactanos" asp-action="Create">
