--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
 </div>
 
 <div class="seccion-titulo" >
-  <h5 class="titulo-seccion">Quienes Somos</h5>
+  <h5 class="titulo-prim">Quienes Somos</h5>
 </div>
 
 <div class="seccion-container">
@@ -48,7 +48,7 @@
 </div>
 
 <div class="seccion-titulo" >
-  <h5 class="titulo-seccion">Qué Ofrecemos</h5>
+  <h5 class="titulo-prim">Qué Ofrecemos</h5>
 </div>
 
 <div class="seccion-container">
