--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="seccion-prim" >
+  <h5 class="titulo-prim">Catalogo</h5>
+</div>
 <table class="table">
     <thead>
         <tr>
