--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -3,13 +3,10 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Product</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div class="container-form">
+        <div class="seccion-prim" >
+  <h5 class="titulo-prim">Crear Producto</h5>
+</div>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -47,7 +44,6 @@
             </div>
         </form>
     </div>
-</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
