--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -4,18 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Product</h4>
-    <hr />
+<div class="container-form">
+    <div class="seccion-prim" >
+    <h5 class="titulo-prim">@Html.DisplayFor(model => model.Name)</h5>
+    </div>
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
