--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Product</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div class="container-form">
+        <div class="seccion-prim" >
+  <h5 class="titulo-prim">Editar</h5>
+</div>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -48,7 +46,7 @@
             </div>
         </form>
     </div>
-</div>
+
 
 <div>
     <a asp-action="Index">Back to List</a>
