--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -7,12 +7,11 @@
     listProformas = @Model.proformas;
     Decimal montoTotal = @Model.montoTotal;
 }
-
-<h1>@ViewData["Title"]</h1>
-
-<a class="btn btn-primary" asp-controller="Pago" 
-        asp-action="Create" asp-route-monto="@montoTotal">Pagar</a><p>Total S/. @montoTotal</p>
-
+<br>
+<div class="seccion-prim" >
+  <h5 class="titulo-prim">@ViewData["Title"]</h5>
+</div>
+<div class="container-carrito">
 <table class="table">
     <thead>
         <tr>
@@ -41,10 +40,15 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn-prim" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a class="btn-sec" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<p>Total S/. @montoTotal</p>
+<a class="btn-sec btn-completo" asp-controller="Pago" 
+        asp-action="Create" asp-route-monto="@montoTotal">Pagar</a>
+
+</div>
