--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,10 +17,17 @@
                     <partial name="_LoginPartial" />
             </nav>
         </header>
+        <div class="social">
+        <ul>
+      
+      <li> <a href="https://m.me/Lamielpasteleria" target="_blank"  class="fab fa-facebook-messenger icons-sticky"></a></li>
+      <li> <a href="https://api.whatsapp.com/send?phone=51989431963&text=%C2%A1Hola!%20Quisiera%20realizar%20un%20pedido...%20" target="_blank" class="fab fa-whatsapp icons-sticky"></a></li>
+    </ul>
+        </div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-        <footer class="border-top footer text-muted">
+        <footer class="border-top footer text-muted">   
         <div class="container">
             &copy; 2021 - La Miel - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
