--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <ul>
       
       <li> <a href="https://m.me/Lamielpasteleria" target="_blank"  class="fab fa-facebook-messenger icons-sticky"></a></li>
-      <li> <a href="https://api.whatsapp.com/send?phone=51989431963&text=%C2%A1Hola!%20Quisiera%20realizar%20un%20pedido...%20" target="_blank" class="fab fa-whatsapp icons-sticky"></a></li>
+      <li> <a href="https://api.whatsapp.com/send?phone=51989431963&text=%C2%A1Hola!%20Quisiera%20realizar%20una%20cotización...%20" target="_blank" class="fab fa-whatsapp icons-sticky"></a></li>
     </ul>
         </div>
         <main role="main" class="pb-3">
