--- a/Views/Proforma/Edit.cshtml
+++ b/Views/Proforma/Edit.cshtml
@@ -4,33 +4,38 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Proforma</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Proforma" asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form asp-controller="Proforma" asp-action="Edit">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    
+<div class="container-detalles">
+  <div class="seccion-titulo titulo-detalles" >
+    <h5 class="titulo-prim">@Html.DisplayFor(model => Model.Producto.Name)</h5>
+  </div>
+  <div class="img-detalles">
+    <img class="img-producto" src="/img/@Html.DisplayFor(model => model.Producto.ImagenName)" alt="@Html.DisplayFor(model => model.Producto.ImagenName)"  />
+  </div>
+  <div class="edit-detalles">
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="UserID" />
             <input type="hidden" asp-for="Price" />
             <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
+                <label asp-for="Price" class="control-label text-center">Precio</label>
+                <input asp-for="Price" class="form-control" disabled/>
+                <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Quantity" class="control-label text-center">Cantidad</label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="editar-btn">
+            <input type="submit" value="Actualizar" class="btn btn-prim btn-completo" />
             </div>
-        </form>
-    </div>
+  </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+</form>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
