--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,63 +1,40 @@
 @model IEnumerable<LaMielApp.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Catalogo";
 }
 
-<div class="seccion-prim" >
-  <h5 class="titulo-prim">Catalogo</h5>
+<div class="seccion-titulo" >
+  <h5 class="titulo-prim">@ViewData["Title"]</h5>
 </div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagenName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DueDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImagenName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DueDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container-buscar">
+    <form>
+      <input class="form-control buscar-producto" type="search" placeholder="Buscar" aria-label="Search" value=" @ViewData["Getemployeedetails"]" name="Searchpro">
+      <button class="btn btn-prim" type="submit">Buscar</button>
+    </form>
+  </div>
+  <br>
+<div class="contenedor-catalogo">
+    @foreach (var item in Model)
+    {
+    <div class="card">
+        <div class="card-body">
+            <div class="card-img-actions">
+                <img class="img-catalogo" width="96" height="150" src="/img/@item.ImagenName"
+                    alt="@item.ImagenName" />
+            </div>
+        </div>
+        <div class="card-body">
+            <h5 class="nom-producto">@Html.DisplayFor(modelItem => item.Name)</h5>
+            <p class="precio-producto">@Html.DisplayFor(modelItem => item.Price)</p>
+            <div class="catalogo-btn">
+            <a class="btn btn-editar" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+            <a class="btn btn-eliminar" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+            </div>
+            <div class="form-group mt-3">
+                <a class="btn btn-prim form-control"asp-action="Details" asp-route-id="@item.Id">Detalles</a> 
+            </div>
+        </div>
+    </div>
+    }
+</div>
