--- a/Views/Product/Delete.cshtml
+++ b/Views/Product/Delete.cshtml
@@ -1,48 +1,52 @@
 @model LaMielApp.Models.Product
 
+
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
+<div class="seccion-titulo" >
+  <h5 class="titulo-prim">Eliminar</h5>
+</div>
+<div class="seccion-titulo" >
+  <h5 class="titulo-prim">Estas seguro que quieres eliminar este preducto?</h5>
+</div>
+<div class="crud-producto">
+    <h4>Producto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Nombre
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            Descripción
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Precio
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagenName)
+            Imagen
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImagenName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DueDate)
+            Registro
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DueDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
+            Estado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Status)
@@ -51,7 +55,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-eliminar" /> |
+        <a asp-action="Index" class="btn btn-prim">Regresar al catálogo</a>
     </form>
 </div>
